--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 <body>
     <h1>Deviation</h1>
     <div id="foreword">
-        This is an archive of my DeviantArt profile from 2008. Back then...
-        <!-- You can replace this text with your personal foreword -->
+        From 2008 to 2010 I maintained an active DeviantArt presence. I posted
+        hundreds of "deviations" (artworks), but I also built community,
+        connection, and meaning with the other users there. DA was my first real
+        taste of social media, with all its good and ill. The images here are
+        merely the works I posted, they are divorced from the social likes and
+        comments that gave them significance to me at the time.
     </div>
     <div id="deviations-container">
         <!-- Items will be rendered here -->
